--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@internationalized/date": "^3.5.2",
     "@nextui-org/react": "^2.3.1",
     "@radial-color-picker/react-color-picker": "^4.0.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@react-three/fiber": "^8.16.4",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-table": "^8.12.0",
@@ -45,7 +46,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-resizable-panels": "^2.0.9",
-    "recharts": "^2.12.0",
+    "recharts": "^2.12.7",
     "simplex-noise": "^4.0.1",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
